@@ -23,7 +23,7 @@ import java.lang.reflect.Constructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import sun.misc.SharedSecrets;
+import jdk.internal.access.SharedSecrets;
 
 /**
  * Main class for running a hive worker in Java
@@ -79,10 +79,10 @@ public class RunWrapper {
 //		log.debug("Initializing runnable module " + clazz.getName() + " from " + args[1] + " and " + args[2]);
 
         FileDescriptor inputDescriptor = new FileDescriptor();
-        sun.misc.SharedSecrets.getJavaIOFileDescriptorAccess().set(inputDescriptor, Integer.parseInt(args[1]));
+        SharedSecrets.getJavaIOFileDescriptorAccess().set(inputDescriptor, Integer.parseInt(args[1]));
 
         FileDescriptor outputDescriptor = new FileDescriptor();
-        sun.misc.SharedSecrets.getJavaIOFileDescriptorAccess().set(outputDescriptor, Integer.parseInt(args[2]));
+        SharedSecrets.getJavaIOFileDescriptorAccess().set(outputDescriptor, Integer.parseInt(args[2]));
 
 		BaseRunnable runnable = (BaseRunnable) (ctor.newInstance());
         runnable.setFileDescriptors(inputDescriptor, outputDescriptor);
